--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -42,5 +42,10 @@
       "Pdf"
     ]
   },
+  "Targets": {
+    "Pdf": {
+      "template_folder": "_themes.pdf"
+    }
+  },
   "need_generate_pdf_url_template": true
 }
