--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -42,7 +42,8 @@
       "Pdf"
     ]
   },
-
-  "need_generate_pdf_url_template": true
+  "need_generate_pdf_url_template": true,
+  "docs_build_engine": {
+    "name": "docfx_v3"
+  }
 }
-
