--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -42,7 +42,11 @@
       "Pdf"
     ]
   },
-
+  "targets": {
+    "Pdf": {
+      "template_folder": "_themes.pdf"
+    }
+  }
   "need_generate_pdf_url_template": true
 }
 
