--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -42,6 +42,7 @@
       "Pdf"
     ]
   },
+  "need_generate_pdf_url_template": true,
   "targets": {
     "Pdf": {
       "template_folder": "_themes.pdf"
